2002-09-24  Per Bothner  <per@bothner.com>

	* kawa/standard/define.java (scanForDefinitions):  If inlineOk is false,
	mark declaration as writeable, even if functional definition.
	* kawa/repl.java (processArgs):  Set compile.inlineOk to false
	if --no-inline or --inline=none is specified.

	* kawa/repl.java (printOptions):  Also mention --output-format.

	* kawa/repl.java (processArgs):  Update copyright year printed by --version.

2002-09-21  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewrite, rewriteBody):  Use 'matches'
	method of Translator to match against '::'.

	* kawa/standard/Scheme.java (initScheme):  Add define-record-type.

2002-08-22  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (expander):  Change type to Object.
	(getExpander):  Remove unused method.
	(expand):  Handle expander as evaluated Procedure, or
	an re-written S-expression.  If latter, re-write it.
	* kawa/standard/define_syntax.java (scanForDefinitions):  Set expander.
	(rewrite):  Re-write expander if it has been re-written yet.

2002-08-16  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Always look for known
	functions, even if immediate.

2002-08-10  Jim White  <jim@pagesmiths.com>

	* build.xml:  Patch to compile HTTP.scm.

2002-08-04  Per Bothner  <per@bothner.com>

	* kawa/standard/{string_ci_equal_p.java, string_ci_greaterequal_p.java,
	string_ci_greaterthan_p.java, string_ci_lessequal_p.java,
	string_ci_lessthan_p.java, string_greaterequal_p.java,
	string_greaterthan_p.java, string_lessequal_p.java,
	string_lessthan_p.java}:  Removed - noew use kawa.lib.strings.
	* kawa/standard/Makefile.am:  Update accordingly.
	* kawa/standard/vector_append.java (vectorAppend):  New static field.
	(<init>):  New constructor
	* kawa/standard/Scheme.java (initScheme):  Update accordingly.

2002-08-02  Per Bothner  <per@bothner.com>

	* kawa/standard/expt.java (expt):  New static methods.
	(expt)  New static final field.